# fedbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/fedbox/algo/commons/: mixin.py  optim.py  typing.py
src/fedbox/algo/fedavg/: __init__.py  client.py  model.py  server.py
src/fedbox/algo/fedprox/: __init__.py  client.py  optim.py  server.py
src/fedbox/algo/localonly/: __init__.py  client.py  server.py
src/fedbox/algo/scaffold/: __init__.py  client.py  functional.py  optim.py  server.py
src/fedbox/utils/: _deprecated.py  functional.py  training.py
src/fedbox/utils/data/: __init__.py  splitting.py
tests/utils/: test_functional.py  test_splitting.py  test_training.py
